# collec_scanner

./: .gitignore  AENPopup.qml  BarcodeScanner.qml  CMakeLists.txt  README.md  ViewBarcodeScanner.qml  ViewCreateGame.qml  android_permissions.cpp  android_permissions.h  cmake_global.h  cmake_global.h.in  codefilterproxymodel.cpp  codefilterproxymodel.h  collecscanner.pro  commanager.cpp  commanager.h  covermanager.cpp  covermanager.h  databasemanager.cpp  databasemanager.h  dbmanager.cpp  dbmanager.h  download_db_view.qml  ebayobject.cpp  ebayobject.h  filemanager.cpp  filemanager.h  gamedata.cpp  gamedata.h  global.h  imagemanager.cpp  imagemanager.h  imagemanager.h.autosave  main.cpp  main.qml  media.qrc  qml.qrc  sortfilterproxymodel.cpp  sortfilterproxymodel.h  sqltablemodel.cpp  (+6 more)
android/: AndroidManifest.xml  build.gradle
android/res/values/: libs.xml
html/: index.php
i18n/: qml_en_EN.ts  qml_fr_FR.ts
qml/: BarcodeScanner.qml  BarcodeScannerView.qml  CollectionView.qml  ConfigDrawer.qml  ConfirmActionPopup.qml  ConfirmDeletePopup.qml  ConfirmSaveDBPopup.qml  CoverDownloadingPopup.qml  CoverProcessingPopup.qml  DataProcessingPopup.qml  DelegateGame.qml  DelegateGameData.qml  DelegateGameList.qml  DrawerConfig.qml  GameDataDelegate.qml  GameDataView.qml  GameGridDelegate.qml  GameGridView.qml  GameInfoCoverRow.qml  GameInfoListDelegate.qml  GameInfoView.qml  GameListDelegate.qml  GameListView.qml  GameSwipeDelegate.qml  GameSwipeView.qml  NewDatabasePopup.qml  PopupConfirmDelete.qml  PopupConfirmSaveDB.qml  PopupGameData.qml  PopupTagUnknown.qml  PopupTakeSnapshot.qml  TagUnknownPopup.qml  TakeSnapshotPopup.qml  ViewBarcodeScanner.qml  ViewCreateGame.qml  ViewGameData.qml  ViewGameList.qml  ViewSelectorDrawer.qml
qml/BarcodeScannerView/: BarcodeScanner.qml  BarcodeScannerView.qml  TagUnknownPopup.qml
qml/CollectionView/: AddGameButton.qml  CollectionView.qml  ConfigMenuBar.qml  GameGridContainerDelegate.qml  GameGridDelegate.qml  GameGridView.qml  GameListContainerDelegate.qml  GameListDelegate.qml  GameListView.qml  ViewSelectorDrawer.qml
qml/GameInfoView/: GameInfoCoverRow.qml  GameInfoListDelegate.qml  GameInfoView.qml  GameSwipeDelegate.qml  GameSwipeView.qml  NewGameView.qml  PricesPopup.qml  TakeSnapshotPopup.qml
qml/utils/: CSActionPopup.qml  CSButton.qml  CSCameraOutput.qml  CSGlowImage.qml  CSGlowText.qml  ConfirmActionPopup.qml  ConfirmDeletePopup.qml  PlatformSelector.js  PopupMaker.js
qzxing/: CMakeLists.txt  QZXingFilterVideoSink.cpp  QZXingFilterVideoSink.h
translations/: en_EN.ts  fr_FR.ts
